fix: adjust font size for links to improve readability

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 }
 a.links {
     color: #000000;
-    font-size: 11dvw;
+    font-size: 2.5em;
 }
 a.links:hover {
     color: #ffffff;
